spacing fix

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 #home-title {
-  height: calc(50vh - 6rem);
+  height: calc(50vh - 8rem);
   width: 80%;
   margin: 3.75rem 10% 0;
   display:flex;
